--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,14 @@
   "author": "Harmeet Singh Bali",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "socket.io": "^4.1.3"
   }
 }
